--- a/app/templates/home-page.html
+++ b/app/templates/home-page.html
@@ -79,7 +79,7 @@
                             {% endif %}
 
                             <div id="ID_{{day.number}}">
-                                {{day.date}} - {{day.name}}
+                                {{day.number}}. nap - {{day.date}} - {{day.name}}
                             </div>
 
                             <table style="width:90%;margin-left:20px;{%if loop.index % 10 == 1 %} background:yellow; {% endif %}">
