--- a/app/templates/groupBet/group-during.html
+++ b/app/templates/groupBet/group-during.html
@@ -1,16 +1,33 @@
+{% if groups is not none %}
+
+<div>Kezdőtőke: {{starting_bet_amount}}</div>
+
+<div>
+    <div style="display: inline-block;">Végeredmény-tipp:</div>
+    <div style="display: inline-block;">{{final_bet.hun_name}} -  </div>
+    <div style="display: inline-block;" id="resultID">{{final_bet.result}} </div>
+    <div style="display: inline-block;">(szorzó: {{final_bet.multiplier}})</div>
+    <div style="display: inline-block; padding-left: 1em;">Tét: {{final_bet.betting_amount}}</div>
+    <div style="display: inline-block; padding-left: 1em;">Várható nyeremény: {{final_bet.winning_amount}}</div>
+</div>
+
 {% for group in groups %}
 
 <div id="sorting-disabled" class="row" style="width: 30em;padding-left: 1em;">
-    <h4 class="col-12">{{group.ID}}. csoport: Tét - {{group.bet_amount}} tallér</h4>
+    <h4 class="col-12">{{group.ID}}. csoport: Tét - {{group.bet}} tallér</h4>
     <div id="example4-left" class="list-group col" style="padding-left: 2em;">
         <div class="list-group-item" style="background-color: #b8b8b8;">Tipp</div>
-        <div class="list-group-item">1. {{group.first}}</div>
-        <div class="list-group-item">2. {{group.second}}</div>
-        <div class="list-group-item">3. {{group.third}}</div>
-        <div class="list-group-item">4. {{group.fourth}}</div>
+        <div class="list-group-item">1. {{group.teams[0].hun_name}}</div>
+        <div class="list-group-item">2. {{group.teams[1].hun_name}}</div>
+        <div class="list-group-item">3. {{group.teams[2].hun_name}}</div>
+        <div class="list-group-item">4. {{group.teams[3].hun_name}}</div>
     </div>
 </div>
 <br>
 {% endfor %}
 
 <div>Felhasználható összeg csoportkör tipp után: {{amount_after}}</div>
+
+{% else %}
+A játékos nem fogadott csoportkörre, így a kezdő egyenlege: {{starting_bet_amount}}.
+{% endif %}
