--- a/app/templates/groupBet/group-during.html
+++ b/app/templates/groupBet/group-during.html
@@ -6,7 +6,7 @@
     <div style="display: inline-block;">Végeredmény-tipp:</div>
     <div style="display: inline-block;">{{final_bet.hun_name}} -  </div>
     <div style="display: inline-block;" id="resultID">{{final_bet.result}} </div>
-    <div style="display: inline-block;">(szorzó: {{final_bet.multiplier}})</div>
+    <a href="./final-odds">Szorzó: {{final_bet.multiplier}}</a>
     <div style="display: inline-block; padding-left: 1em;">Tét: {{final_bet.betting_amount}}</div>
     <div style="display: inline-block; padding-left: 1em;">Várható nyeremény: {{final_bet.winning_amount}}</div>
 </div>
