--- a/app/templates/groupBet/group-after.html
+++ b/app/templates/groupBet/group-after.html
@@ -1,43 +1,40 @@
-{% if group_containers is none %}
-Kiértékelés folyamatban...
-{% else %}
-
+<h3> Csoportkör- és végsőtippen megjátszott összes tét: {{total_bet}}</h3>
+<br>
+<h3 style="display: inline-block;"> Az össznyeremény csoportkör-tippeken: {{total_win}}, </h3>
+<h3 style="display: inline-block; padding-left: 10em;">tét: {{total_bet - final_bet.betting_amount}}</h3>
 <div>
 {%if final_bet.success == "" %}
-    <div style="display: inline-block;">Végső-tipp: {{final_bet.hun_name}} - </div>
-    <div style="display: inline-block;" id="resultID">{{final_bet.result}}</div>
-    <div style="display: inline-block; padding-left: 0em;">(Szorzó: {{final_bet.multiplier}})</div>
-    <div style="display: inline-block; padding-left: 2em;">Tét: {{final_bet.betting_amount}} </div>
-    <div style="display: inline-block; padding-left: 2em;">Várható nyeremény: {{final_bet.winning_amount}}</div>
+    <h3 style="display: inline-block;">Végső-tipp: {{final_bet.hun_name}} - </h3>
+    <h3 style="display: inline-block;" id="resultID">{{final_bet.result}}</h3>
+    <h3 style="display: inline-block; padding-left: 0em;">(Szorzó: {{final_bet.multiplier}})</h3>
+    <h3 style="display: inline-block; padding-left: 2em;">Tét: {{final_bet.betting_amount}} </h3>
+    <h3 style="display: inline-block; padding-left: 2em;">Várható nyeremény: {{final_bet.betting_amount * final_bet.multiplier}}</h3>
     
 {%elif final_bet.success == 1 %}
-    <div style="display: inline-block;">Végső-tipp - sikeres: {{final_bet.hun_name}} - </div>
-    <div style="display: inline-block; background-color: lime;" id="resultID">{{final_bet.result}}</div>
-    <div style="display: inline-block; padding-left: 0em;">(Szorzó: {{final_bet.multiplier}})</div>
-    <div style="display: inline-block; padding-left: 2em;">Tét: {{final_bet.betting_amount}} </div>
-    <div style="display: inline-block; padding-left: 2em;">Nyeremény: {{final_bet.winning_amount}}</div>
+    <h3 style="display: inline-block;">Végső-tipp - sikeres: {{final_bet.hun_name}} - </h3>
+    <h3 style="display: inline-block; background-color: lime;" id="resultID">{{final_bet.result}}</h3>
+    <h3 style="display: inline-block; padding-left: 0em;">(Szorzó: {{final_bet.multiplier}})</h3>
+    <h3 style="display: inline-block; padding-left: 2em;">Tét: {{final_bet.betting_amount}} </h3>
+    <h3 style="display: inline-block; padding-left: 2em;">Nyeremény: {{final_bet.winning_amount}}</h3>
 {% else %}
-    <div style="display: inline-block;">Végső-tipp - sikertelen: {{final_bet.hun_name}} - </div>
-    <div style="display: inline-block; background-color: lightcoral;" id="resultID">{{final_bet.result}}</div>
-    <div style="display: inline-block; padding-left: 0em;">(Szorzó: {{final_bet.multiplier}})</div>
-    <div style="display: inline-block; padding-left: 2em;">Tét: {{final_bet.betting_amount}} </div>
+    <h3 style="display: inline-block;">Végső-tipp - sikertelen: {{final_bet.hun_name}} - </h3>
+    <h3 style="display: inline-block; background-color: lightcoral;" id="resultID">{{final_bet.result}}</h3>
+    <h3 style="display: inline-block; padding-left: 0em;">(Szorzó: {{final_bet.multiplier}})</h3>
+    <h3 style="display: inline-block; padding-left: 2em;">Tét: {{final_bet.betting_amount}} </h3>
 {% endif %}
 </div>
 <br>
-<div> Csoportkör-tippen megjátszott összes tét: {{total_bet}}</div>
-<div> Az össznyeremény csoportkör-tippeken: {{total_win}}</div>
-<br>
 {% for group_container in group_containers %}
-<div>
-    {{group_container.bet.ID}}. csoport:
+<h4>
+    {{group_container.ID}}. csoport:
+</h4>
+
+<div style="padding-left: 1em;">
+    Találatok: {{group_container.bet_property.hit_number}} - szorzó: {{group_container.bet_property.multiplier}}
 </div>
 
 <div style="padding-left: 1em;">
-    Találatok: {{group_container.result.hit_number}} - szorzó: {{group_container.result.multiplier}}
-</div>
-
-<div style="padding-left: 1em;">
-    Tét: {{group_container.bet.bet}} tallér - nyeremény: {{group_container.result.win_amount}} tallér
+    Tét: {{group_container.bet_property.amount}} tallér - nyeremény: <b>{{group_container.bet_property.win}}</b> tallér (változás : {{group_container.bet_property.win|int - group_container.bet_property.amount|int}})
 </div>
 
 <div id="sorting-disabled" class="row" style="padding-left: 1em;">
@@ -45,21 +42,27 @@ Kiértékelés folyamatban...
 
     <div id="example4-left" class="list-group col" style="padding-left: 1em; width: 20em;">
         <div class="list-group-item" style="background-color: #b8b8b8;">Végeredmény</div>
-        <div class="list-group-item">1. {{group_container.result.teams[0].name}} </div>
-        <div class="list-group-item">2. {{group_container.result.teams[1].name}}</div>
-        <div class="list-group-item">3. {{group_container.result.teams[2].name}}</div>
-        <div class="list-group-item">4. {{group_container.result.teams[3].name}}</div>
+        {%for i in range(4) %}
+        <div class="list-group-item">{{i+1}}. {{group_container.teams[i].hun_name}}</div>
+        {% endfor %}
     </div>
 
     <div id="example4-right" class="list-group col" style="width: 30em;">
         <div class="list-group-item" style="background-color: #b8b8b8;">Tipp</div>
-        <div class="list-group-item tinted" style="background-color: {{group_container.result.teams[0].background}};">{{group_container.bet.teams[0].hun_name}}</div>
-        <div class="list-group-item tinted" style="background-color: {{group_container.result.teams[1].background}};">{{group_container.bet.teams[1].hun_name}}</div>
-        <div class="list-group-item tinted" style="background-color: {{group_container.result.teams[2].background}};">{{group_container.bet.teams[2].hun_name}}</div>
-        <div class="list-group-item tinted" style="background-color: {{group_container.result.teams[3].background}};">{{group_container.bet.teams[3].hun_name}}</div>
+        {%for i in range(4) %}
+            {% if group_container.bets|length < 4 or group_container.bet_property.amount == 0 %}
+                {% set color = "orange" %}
+                {% set text = "A játékos nem fogadott a csoportra!" %}
+            {% elif group_container.teams[i].name == group_container.bets[i].team %}
+                {% set color = "lime" %}
+                {% set text = group_container.bets[i].hun_name %}
+            {% else %} 
+                {% set color = "lightcoral" %}
+                {% set text = group_container.bets[i].hun_name %}
+            {% endif %}
+                <div class="list-group-item tinted" style="background-color: {{color}};">{{text}}</div>
+        {% endfor %}
     </div>
 </div>
 <br>
 {% endfor %}
-
-{% endif %}
